Improved Media Query

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
 
-  <div id="main-container" class="container" id="portfolio1">
+  <div id="main-container" class="container">
         <section class="main-section">
           
     <div class="container">
