--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">Your Name</a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" class=media1>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
