--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Your Name</title>
+  <title>About | Portfolio</title>
   <link rel="stylesheet" type="text/css"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">Your Name</a>
+                <a class="navbar-brand" href="index.html">Olivia Kalinowski</a>
             </div>
             <ul class="nav navbar-nav navbar-right" class=media1>
                 <li class="nav-item">
@@ -40,7 +40,7 @@
       </div>
       <div class="row">
         <div class="col-md-3">
-          <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+          <img src="assets/images/Olivia Kalinowski ID.jpg" class="auth-image" alt="Your Name">
         </div>
 
         <div class="col-md-9">
@@ -67,12 +67,6 @@
         Copyright &copy; 
       </div>
     </footer>
-<!-- 
-    <footer class="container-fluid">
-        <nav class="navbar fixed-bottom">
-          Copyright
-        </nav>
-       </footer> -->
 
 </body>
 
